# mind2web2-agentbeats

./: Dockerfile  README.md  amber-manifest.json5  pyproject.toml
.github/workflows/: test-and-publish.yml
amber/: amber-manifest-green.json5  amber-manifest-purple.json5  amber-scenario.json5
src/: agent.py  llm_client.py  server.py
